# kroco6

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  README.md  components.json  index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: manual-release.yaml
src/: App.tsx  app.html  app.pcss  globals.css  globals.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: json_output.py
src-tauri/resources/certificates/: mitmproxy-ca-cert.cer  mitmproxy-ca-cert.p12  mitmproxy-ca.p12  mitmproxy-ca.pem
src-tauri/src/: application.rs  cloud.rs  executable.rs  main.rs  models.rs  operations.rs  project.rs  traits.rs
src-tauri/src/js/: mod.rs
src/atoms/: project.ts  runs.ts
src/components/: Environment.tsx  EnvironmentList.tsx  TestList.tsx
src/components/base/: button.tsx  command.tsx  input.tsx  tabs.tsx  toaster.tsx  use-toast.ts
src/lib/: Logo.svelte  backend-client.ts  browser-types.ts  codegen.ts  convert.ts  example-scripts.ts  files.ts  types.ts
src/routes/: +layout.svelte  +page.svelte  CreateProjectDialog.svelte  CreateProjectDialog.tsx  Layout.tsx  Page.tsx  PlaceholderIcon.tsx  ProjectIcon.tsx  ProjectSelector.svelte  ProjectSelector.tsx  ProjectTree.tsx  Sidebar.svelte  Sidebar.tsx  SidebarSection.svelte  SidebarSection.tsx  actions.ts  hooks.ts
src/schemas/: project.ts
src/utils/: codegen.ts
src/views/: EditorTabs.tsx  Main.tsx  TabButton.tsx
static/: splashscreen.html
ui/: index.html  run.html
(+370 files in other folders)
