[package]
name = "kroco6"
version = "0.1.0"
description = "An interface to manage your k6 tests & more!"
authors = ["Llandy Riveron Del Risco <llandy3d@gmail.com>"]
license = ""
repository = "https://github.com/Llandy3d/kroco6"
default-run = "kroco6"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.3", features = [
  "shell-open",
  "http-request",
  "dialog-message",
] }
dirs = "5.0.1"
reqwest = { version = "0.11", features = ["json"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
